# TienKung_dex_mimic

./: .gitignore  CLAUDE.md  README.md  batch_pkl_to_npz.sh  env.yaml  log.sh  play_c1.sh  play_dex.sh  replay.sh  sim2sim_c1.sh  sim2sim_dex.sh  train_c1.sh  train_dex.sh
source/whole_body_tracking/: pyproject.toml
source/whole_body_tracking/whole_body_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/whole_body_tracking/whole_body_tracking/assets/dex_evt/meshes_new/: camera_head_link.STL  elbow_pitch_l_link.STL  elbow_yaw_r_link.STL  head_yaw_link.STL  knee_pitch_l_link.STL  knee_pitch_r_link.STL  pelvis.STL  shoulder_pitch_r_link.STL  shoulder_roll_l_link.STL  shoulder_roll_r_link.STL  shoulder_yaw_l_link.STL  waist_yaw_link.STL
source/whole_body_tracking/whole_body_tracking/assets/dex_evt/urdf/: evt2.xml  evt2_mujoco.urdf
source/whole_body_tracking/whole_body_tracking/assets/walker_c1/meshes/: L_ankle_pitch_link.STL  L_elbow_pitch_link.STL  L_hip_pitch_link.STL  L_hip_roll_link.STL  L_hip_yaw_link.STL  L_knee_pitch_link.STL  L_shoulder_pitch_link.STL  L_shoulder_roll_link.STL  L_wrist_roll_link.STL  R_elbow_pitch_link.STL  R_elbow_yaw_link.STL  R_hip_pitch_link.STL  R_hip_roll_link.STL  R_knee_pitch_link.STL  R_shoulder_roll_link.STL  R_wrist_pitch_link.STL  R_wrist_roll_link.STL  (+5 more)
source/whole_body_tracking/whole_body_tracking/robots/: dex_evt.py  walker_c1.py
source/whole_body_tracking/whole_body_tracking/tasks/tracking/: tracking_env_cfg.py
source/whole_body_tracking/whole_body_tracking/utils/: exporter.py  my_on_policy_runner.py
(+228 files in other folders)
